--- a/index.html
+++ b/index.html
@@ -5,54 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="index.html">WebStudio</a>
-        <ul>
-          <li><a href="index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <a class="logo list link" href="./index.html"
+          >Web<span class="studio-header">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="navigation link" href="./index.html">Studio</a></li>
+          <li>
+            <a class="navigation link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="navigation link" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="list">
+        <li>
+          <a class="contacts link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contacts link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="slogan">
+        <h1 class="slogan-text">Effective Solutions for Your Business</h1>
+        <button class="main-btn" type="button">Order Service</button>
       </section>
       <section>
         <!-- Потрібно приховати -->
-        <h2>Our advantages</h2>
-        <ul>
+        <h2 class="visually-hidden">Our advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="subtitle">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="subtitle">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="subtitle">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="subtitle">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -61,8 +80,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/monitor.jpg"
@@ -86,46 +105,48 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-list">
+        <h2 class="title">Our Team</h2>
+        <ul class="list">
+          <li class="team-item">
             <img
               src="./images/product-designer.jpg"
               alt="Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="subtitle team">Mark Guerrero</h3>
+            <p class="team">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/frontend-developer.jpg"
               alt="Tom Ford"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="subtitle team">Tom Ford</h3>
+            <p class="team">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/marketing.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle team">Camila Garcia</h3>
+            <p class="team">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/ui-designer.jpg"
               alt="Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="subtitle team">Daniel Wilson</h3>
+            <p class="team">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo list link logo-small" href="index.html"
+        >Web<span class="studio-footer">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
