--- a/portfolio.html
+++ b/portfolio.html
@@ -5,139 +5,157 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <a class="logo list link" href="./index.html"
+          >Web<span class="studio-header">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="navigation link" href="./index.html">Studio</a></li>
+          <li>
+            <a class="navigation link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="navigation link" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="list">
+        <li>
+          <a class="contacts link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contacts link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <section>
         <!--  Потрібно приховати -->
-        <h1>Our products</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-        <ul>
+        <h1 class="visually-hidden">Our products</h1>
+        <ul class="list">
+          <li><button class="button-filter" type="button">All</button></li>
+          <li><button class="button-filter" type="button">Web Site</button></li>
+          <li><button class="button-filter" type="button">App</button></li>
+          <li><button class="button-filter" type="button">Design</button></li>
           <li>
-            <a href="#">
+            <button class="button-filter" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="list">
+          <li>
+            <a class="item-link" href="#">
               <img
                 src="./images/banking-app.jpg"
                 alt="Banking App"
                 width="360"
               />
-              <h2>Banking App Interface Concept</h2>
+              <h2 class="item-title">Banking App Interface Concept</h2>
               <p>App</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/cashless-payment.jpg"
-                alt="Blue background"
+                alt="Cashless payment"
                 width="360"
               />
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h2>Cashless Payment</h2>
+              <h2 class="item-title">Cashless Payment</h2>
               <p>Marketing</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/meditation-app.jpg"
                 alt="Laptop and phone"
                 width="360"
               />
-              <h2>Meditaion App</h2>
+              <h2 class="item-title">Meditaion App</h2>
               <p>App</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Interior of the car"
                 width="360"
               />
-              <h2>Taxi Service</h2>
+              <h2 class="item-title">Taxi Service</h2>
               <p>Marketing</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Phone screen"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
+              <h2 class="item-title">Screen Illustrations</h2>
               <p>Design</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/online-courses.jpg"
                 alt="Smiling woman"
                 width="360"
               />
-              <h2>Online Courses</h2>
+              <h2 class="item-title">Online Courses</h2>
               <p>Marketing</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/instagram-stories.jpg"
                 alt="Instagram stories"
                 width="360"
               />
-              <h2>Instagram Stories Concept</h2>
+              <h2 class="item-title">Instagram Stories Concept</h2>
               <p>Design</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img
                 src="./images/organic-food.jpg"
                 alt="Woman and fruits"
                 width="360"
               />
-              <h2>Organic Food</h2>
+              <h2 class="item-title">Organic Food</h2>
               <p>Web Site</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="item-link" href="#">
               <img src="./images/coffee.jpg" alt="Cup of coffee" width="360" />
-              <h2>Fresh Coffee</h2>
+              <h2 class="item-title">Fresh Coffee</h2>
               <p>Web Site</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo list link logo-small" href="index.html"
+        >Web<span class="studio-footer">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
